Update typography content

--- a/typography.html
+++ b/typography.html
@@ -84,55 +84,131 @@
   <div class="container">
     <h1>Typefaces</h1>
 
-    <section>
-      <ul>
-        <li>
-          <strong>Heading Font Family:</strong> 'Josefin Sans'
+    
+<section id="font-styles">
+    <h3>Josefin Sans</h3>
+    <ul>
+        <li><strong>Font Family:</strong> Josefin Sans, sans-serif</li>
+        <li><strong>Font Styles:</strong>
+            <ul>
+                <li>Light</li>
+                <li>Regular</li>
+                <li>Semi-Bold</li>
+                <li>Bold</li>
+            </ul>
         </li>
-        <li>
-          <strong>Heading Font Weight:</strong> 700 (Bold)
+        <li><strong>Heading 1:</strong>
+            <ul>
+                <li><strong>Font Family:</strong> Josefin Sans</li>
+                <li><strong>Font Weight:</strong> 700</li>
+                <li><strong>Font Size:</strong> 1.5rem</li>
+                <li><strong>Line Height:</strong> 1.8rem</li>
+            </ul>
         </li>
+        <li><strong>Heading 1 Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Heading 2:</strong> Same as Heading 1</li>
+        <li><strong>Heading 2 Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Hero Headline:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 700</li>
+                <li><strong>Font Size:</strong> 2.5rem</li>
+                <li><strong>Line Height:</strong> 3rem</li>
+            </ul>
+        </li>
+        <li><strong>Hero Sub:</strong>
+            <ul>
+                <li><strong>Font Size:</strong> 1.25rem</li>
+            </ul>
+        </li>
+        <li><strong>Body Text:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 400</li>
+                <li><strong>Font Size:</strong> 1rem</li>
+                <li><strong>Line Height:</strong> 1.5rem</li>
+            </ul>
+        </li>
+        <li><strong>Body Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Body Bold:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 700</li>
+            </ul>
+        </li>
+    </ul>
+    <h3>Montserrat</h3>
+    <ul>
+        <li><strong>Font Family:</strong> Montserrat, sans-serif</li>
+        <li><strong>Font Styles:</strong>
+            <ul>
+                <li>Light</li>
+                <li>Regular</li>
+                <li>Semi-Bold</li>
+                <li>Bold</li>
+            </ul>
+        </li>
+        <li><strong>Heading 1:</strong>
+            <ul>
+                <li><strong>Font Family:</strong> Montserrat</li>
+                <li><strong>Font Weight:</strong> 700</li>
+                <li><strong>Font Size:</strong> 1.5rem</li>
+                <li><strong>Line Height:</strong> 1.8rem</li>
+            </ul>
+        </li>
+        <li><strong>Heading 1 Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Heading 2:</strong> Same as Heading 1</li>
+        <li><strong>Heading 2 Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Hero Headline:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 700</li>
+                <li><strong>Font Size:</strong> 2.5rem</li>
+                <li><strong>Line Height:</strong> 3rem</li>
+            </ul>
+        </li>
+        <li><strong>Hero Sub:</strong>
+            <ul>
+                <li><strong>Font Size:</strong> 1.25rem</li>
+            </ul>
+        </li>
+        <li><strong>Body Text:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 400</li>
+                <li><strong>Font Size:</strong> 1rem</li>
+                <li><strong>Line Height:</strong> 1.5rem</li>
+            </ul>
+        </li>
+        <li><strong>Body Light:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 300</li>
+            </ul>
+        </li>
+        <li><strong>Body Bold:</strong>
+            <ul>
+                <li><strong>Font Weight:</strong> 700</li>
+            </ul>
+        </li>
+    </ul>
+</section>
 
-        <li>
-          <strong>Heading Line Height:</strong> 1.2
-        </li>
-        <li>
-          <strong>Heading Letter-spacing:</strong> 1px
-        </li>
-      </ul>
 
-      <ul>
-        <li>
-          <strong>Body Text Font Family:</strong> Lato
-        </li>
-        <li>
-          <strong>Body Text Font Weight:</strong> 400 (Regular), 700 (Bold)
-        </li>
-        <li>
-          <strong>Body Text Font Size:</strong> 16px for desktop, 14px for mobile
-        </li>
-        <li>
-          <strong>Body Text Line Height:</strong> 1.6
-        </li>
-        <li>
-          <strong>Body Text Letter-spacing:</strong> 0.5px
-        </li>
-      </ul>
-    </section>
-
-
-    <section>
-      <p>Paragraph<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</p>
-      <br>
-      <h4>Heading 4<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h4>
-      <br>
-      <h3>Heading 3<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h3>
-      <br>
-      <h2>Heading 2<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h2>
-      <br>
-      <h1>Heading 1<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h1>
-
-    </section>
 
 
   </div>
