Add new utility classes

--- a/typography.html
+++ b/typography.html
@@ -85,8 +85,9 @@
     <h1>Typefaces</h1>
 
     
-<section id="font-styles">
-    <h3>Josefin Sans</h3>
+<section class="typography-container">
+
+  <div><h3>Josefin Sans</h3>
     <ul>
         <li><strong>Font Family:</strong> Josefin Sans, sans-serif</li>
         <li><strong>Font Styles:</strong>
@@ -145,8 +146,9 @@
                 <li><strong>Font Weight:</strong> 700</li>
             </ul>
         </li>
-    </ul>
-    <h3>Montserrat</h3>
+    </ul></div>
+
+  <div><h3>Montserrat</h3>
     <ul>
         <li><strong>Font Family:</strong> Montserrat, sans-serif</li>
         <li><strong>Font Styles:</strong>
@@ -205,7 +207,8 @@
                 <li><strong>Font Weight:</strong> 700</li>
             </ul>
         </li>
-    </ul>
+    </ul></div>
+    
 </section>
 
 
