Update typography heading class

--- a/typography.html
+++ b/typography.html
@@ -82,8 +82,8 @@
     
   <section class="typography-container u-bg-white">
 
-    <div class="u-font-josefin-sans">
-      <h3 class="u-text-primary">Josefin Sans</h3>
+    <div class="u-font-josefin-sans typography-container-item">
+      <h2 class="u-text-secondary u-heading-1 u-font-bold">Josefin Sans</h3>
       <div class="u-body-text typography-container-item">
         <p><strong>Font Family:</strong> Josefin Sans, sans-serif</p>
         <p><strong>Font Styles:</strong>
@@ -129,7 +129,7 @@
     </div>
   
     <div class="u-font-montserrat typography-container-item">
-      <h3 class="u-text-secondary">Montserrat</h3>
+      <h3 class="u-text-secondary u-heading-1 u-font-bold">Montserrat</h3>
       <div class="u-body-text typography-container-item">
         <p><strong>Font Family:</strong> Montserrat, sans-serif</p>
         <p><strong>Font Styles:</strong>
