Add utility classes to typography description

--- a/typography.html
+++ b/typography.html
@@ -79,91 +79,98 @@
 
 
   <!-- Typefaces -->
-    
+
   <section class="typography-container u-bg-white">
 
     <div class="u-font-josefin-sans typography-container-item">
-      <h2 class="u-text-secondary u-heading-1 u-font-bold">Josefin Sans</h3>
-      <div class="u-body-text typography-container-item">
-        <p><strong>Font Family:</strong> Josefin Sans, sans-serif</p>
-        <p><strong>Font Styles:</strong>
-          <div>
-            <p class="u-font-light">Light</p>
-            <p class="u-font-regular">Regular</p>
-            <p class="u-font-semibold">Semi-Bold</p>
-            <p class="u-font-bold">Bold</p>
-          </div>
-        </p>
-        <p><strong>Heading 1:</strong>
-          <div>
-            <p><strong>Font Family:</strong> Josefin Sans</p>
-            <p><strong>Font Weight:</strong> 700</p>
-            <p><strong>Font Size:</strong> 1.5rem</p>
-            <p><strong>Line Height:</strong> 1.8rem</p>
-          </div>
-        </p>
-        <p class="u-heading-1 u-font-bold"><strong>Heading 1 Light:</strong>
-          <div>
-            <p class="u-font-light"><strong>Font Weight:</strong> 300</p>
-          </div>
-        </p>
-        <p class="u-heading-2 u-font-bold"><strong>Heading 2:</strong> Same as Heading 1</p>
-        <p class="u-heading-2 u-font-light"><strong>Heading 2 Light:</strong>
-          <div>
-            <p><strong>Font Weight:</strong> 300</p>
-          </div>
-        </p>
-        <p class="u-hero-headline u-font-bold"><strong>Hero Headline:</strong>
-          <div>
-            <p><strong>Font Weight:</strong> 700</p>
-            <p><strong>Font Size:</strong> 2.5rem</p>
-            <p><strong>Line Height:</strong> 3rem</p>
-          </div>
-        </p>
-        <p class="u-hero-sub"><strong>Hero Sub:</strong>
-          <div>
-            <p><strong>Font Size:</strong> 1.25rem</p>
-          </div>
-        </p>
+      <h2 class="u-text-secondary u-heading-1 u-font-bold">Josefin Sans</h2>
+      <p class="u-font-regular">Utility Classes Used: u-font-josefin-sans, u-text-secondary, u-heading-1, u-font-bold
+      </p>
+      <p><strong>Font Family:</strong> Josefin Sans, sans-serif</p>
+      <p><strong>Font Styles:</strong>
+      <div>
+        <p class="u-font-light">Light</p>
+        <p class="u-font-regular">Regular</p>
+        <p class="u-font-semibold">Semi-Bold</p>
+        <p class="u-font-bold">Bold</p>
+        <p class="u-font-regular">Utility Classes Used: u-font-light, u-font-regular, u-font-semibold, u-font-bold</p>
       </div>
+      </p>
+      <p><strong>Heading 1:</strong>
+      <div>
+        <p><strong>Font Family:</strong> Josefin Sans</p>
+        <p><strong>Font Weight:</strong> 700</p>
+        <p><strong>Font Size:</strong> 1.5rem</p>
+        <p><strong>Line Height:</strong> 1.8rem</p>
+        <p class="u-font-regular">Utility Classes Used: u-font-bold, u-heading-1</p>
+      </div>
+      </p>
+      <p class="u-heading-1 u-font-bold"><strong>Heading 1 Light:</strong>
+      <div>
+        <p class="u-font-light"><strong>Font Weight:</strong> 300</p>
+        <p class="u-font-regular">Utility Classes Used: u-heading-1, u-font-bold, u-font-light</p>
+      </div>
+      </p>
+      <p class="u-heading-2 u-font-bold"><strong>Heading 2:</strong> Same as Heading 1</p>
+      <p class="u-font-regular">Utility Classes Used: u-heading-2, u-font-bold</p>
+      <p class="u-heading-2 u-font-light"><strong>Heading 2 Light:</strong>
+      <div>
+        <p><strong>Font Weight:</strong> 300</p>
+        <p class="u-font-regular">Utility Classes Used: u-heading-2, u-font-light</p>
+      </div>
+      </p>
+      <p class="u-hero-headline u-font-bold"><strong>Hero Headline:</strong>
+      <div>
+        <p><strong>Font Weight:</strong> 700</p>
+        <p><strong>Font Size:</strong> 2.5rem</p>
+        <p><strong>Line Height:</strong> 3rem</p>
+        <p class="u-font-regular">Utility Classes Used: u-hero-headline, u-font-bold</p>
+      </div>
+      </p>
+      <p class="u-hero-sub"><strong>Hero Sub:</strong>
+      <div>
+        <p><strong>Font Size:</strong> 1.25rem</p>
+        <p class="u-font-regular">Utility Classes Used: u-hero-sub</p>
+      </div>
+      </p>
     </div>
-  
+
     <div class="u-font-montserrat typography-container-item">
       <h3 class="u-text-secondary u-heading-1 u-font-bold">Montserrat</h3>
-      <div class="u-body-text typography-container-item">
-        <p><strong>Font Family:</strong> Montserrat, sans-serif</p>
-        <p><strong>Font Styles:</strong>
-          <div>
-            <p class="u-font-light">Light</p>
-            <p class="u-font-regular">Regular</p>
-            <p class="u-font-semibold">Semi-Bold</p>
-            <p class="u-font-bold">Bold</p>
-          </div>
-        </p>
-        <p class="u-body-text"><strong>Body Text:</strong>
-          <div>
-            <p class="u-font-regular"><strong>Font Weight:</strong> 400</p>
-            <p><strong>Font Size:</strong> 1rem</p>
-            <p><strong>Line Height:</strong> 1.5rem</p>
-          </div>
-        </p>
-        <p class="u-body-text-light"><strong>Body Light:</strong>
-          <div>
-            <p><strong>Font Weight:</strong> 300</p>
-          </div>
-        </p>
-        <p class="u-body-text-bold"><strong>Body Bold:</strong>
-          <div>
-            <p><strong>Font Weight:</strong> 700</p>
-          </div>
-        </p>
+      <p class="u-font-regular">Utility Classes Used: u-font-montserrat, u-text-secondary, u-heading-1, u-font-bold</p>
+      <p><strong>Font Family:</strong> Montserrat, sans-serif</p>
+      <p><strong>Font Styles:</strong>
+      <div>
+        <p class="u-font-light">Light</p>
+        <p class="u-font-regular">Regular</p>
+        <p class="u-font-semibold">Semi-Bold</p>
+        <p class="u-font-bold">Bold</p>
+        <p class="u-font-regular">Utility Classes Used: u-font-light, u-font-regular, u-font-semibold, u-font-bold</p>
       </div>
+      </p>
+      <p class="u-body-text"><strong>Body Text:</strong>
+      <div>
+        <p class="u-font-regular"><strong>Font Weight:</strong> 400</p>
+        <p><strong>Font Size:</strong> 1rem</p>
+        <p><strong>Line Height:</strong> 1.5rem</p>
+        <p class="u-font-regular">Utility Classes Used: u-body-text, u-font-regular</p>
+      </div>
+      </p>
+      <p class="u-body-text-light"><strong>Body Light:</strong>
+      <div>
+        <p><strong>Font Weight:</strong> 300</p>
+        <p class="u-font-regular">Utility Classes Used: u-body-text-light</p>
+      </div>
+      </p>
+      <p class="u-body-text-bold"><strong>Body Bold:</strong>
+      <div>
+        <p><strong>Font Weight:</strong> 700</p>
+        <p class="u-font-regular">Utility Classes Used: u-body-text-bold</p>
+      </div>
+      </p>
     </div>
-  
-  </section>
-  
-    
 
+  </section>
 
 
   <script src="design-system.js"></script>
