Rearrange typography content

--- a/typography.html
+++ b/typography.html
@@ -84,9 +84,11 @@
 
     <div class="u-font-josefin-sans typography-container-item">
       <h2 class="u-text-secondary u-heading-1 u-font-bold">Josefin Sans</h2>
-      <p class="u-font-regular">Utility Classes Used: u-font-josefin-sans, u-text-secondary, u-heading-1, u-font-bold
-      </p>
+      <p class="u-font-regular">ABCDEFGHIJKLMNOPQRESTVWXYZ</p>
+      <p class="u-font-regular">abcdefghijklmnopqrstuvwxyz</p>
+      <p class="u-font-regular">123456789</p>
       <p><strong>Font Family:</strong> Josefin Sans, sans-serif</p>
+      <p class="u-font-regular">Utility Class: u-font-josefin-sans</p>
       <p><strong>Font Styles:</strong>
       <div>
         <p class="u-font-light">Light</p>
@@ -137,8 +139,11 @@
 
     <div class="u-font-montserrat typography-container-item">
       <h3 class="u-text-secondary u-heading-1 u-font-bold">Montserrat</h3>
-      <p class="u-font-regular">Utility Classes Used: u-font-montserrat, u-text-secondary, u-heading-1, u-font-bold</p>
+      <p class="u-font-regular">ABCDEFGHIJKLMNOPQRESTVWXYZ</p>
+      <p class="u-font-regular">abcdefghijklmnopqrstuvwxyz</p>
+      <p class="u-font-regular">123456789</p>
       <p><strong>Font Family:</strong> Montserrat, sans-serif</p>
+      <p class="u-font-regular">Utility Class: u-font-montserrat</p>
       <p><strong>Font Styles:</strong>
       <div>
         <p class="u-font-light">Light</p>
