--- a/index.html
+++ b/index.html
@@ -11,61 +11,61 @@
 
 <body>
 
-<header>
-  <div class="logo">
-    <a class="logo_text" href="index.html"><h2>Design System</h2></a>
-  </div>
-  <nav class="navigation">
-    <a class="navigation_item" href="about-me.html">About Me</a>
-    <a class="navigation_item" href="">Demo Site</a>
-  </nav>
-
-  <div class="toggleBox">
-    <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
-  </div>
-</header>
-
-<section class="sidebar">
-    <h2>Branding</h2>
-    <ul>
-      <li><a class="sidebar_item" href="colors.html">01 Colours</a></li>
-      <li><a class="sidebar_item" href="typography.html">02 Typography</a></li>
-      <li><a class="sidebar_item" href="#">03 Logo</a></li>
-    </ul>
-
-    <h2>Utilities</h2>
-    <ul>
-      <li><a class="sidebar_item" href="#">04 Spacing</a></li>
-      <li><a class="sidebar_item" href="#">05 Containers</a></li>
-      <li><a class="sidebar_item" href="#">06 Images</a></li>
-      <li><a class="sidebar_item" href="#">07 Interactive</a></li>
-      <li><a class="sidebar_item" href="#">08 Pages</a></li>
-    </ul>
-
-    <h2>Navigation</h2>
-    <ul>
-      <li><a class="sidebar_item" href="#">09 Navbar</a></li>
-      <li><a class="sidebar_item" href="#">10 Breadcrumbs</a></li>
-      <li><a class="sidebar_item" href="#">11 Pagination</a></li>
-    </ul>
-
-    <h2>Blocks</h2>
-    <ul>
-      <li><a class="sidebar_item" href="#">12 Hero</a></li>
-      <li><a class="sidebar_item" href="#">13 Carousel</a></li>
-      <li><a class="sidebar_item" href="#">14 Slats</a></li>
-      <li><a class="sidebar_item" href="#">15 Footer</a></li>
-    </ul>
-
-    <h2>Components</h2>
-    <ul>
-      <li><a class="sidebar_item" href="#">16 Cards</a></li>
-      <li><a class="sidebar_item" href="#">17 Forms</a></li>
-      <li><a class="sidebar_item" href="#">18 Accordion</a></li>
-      <li><a class="sidebar_item" href="#">19 Lists</a></li>
-    </ul>
-
-</section>
+  <header class="u-bg-secondary">
+    <div class="logo">
+      <a class="logo_text u-text-secondary u-font-josefin-sans" href="index.html"><h2 class="u-heading">Design System</h2></a>
+    </div>
+    <nav class="navigation">
+      <a class="navigation_item u-text-secondary u-body-text" href="about-me.html">About Me</a>
+      <a class="navigation_item u-text-secondary u-body-text" href="">Demo Site</a>
+    </nav>
+  
+    <div class="toggleBox">
+      <a onclick="showMenu()" href="#" class="u-text-secondary"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
+    </div>
+  </header>
+  
+  <section class="sidebar u-bg-white">
+      <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
+      <ul class="sidebar_item">
+        <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
+        <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
+      </ul>
+  
+      <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
+      <ul class="sidebar_item">
+        <li><a class="u-text-primary u-body-text" href="#">04 Spacing</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">05 Containers</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
+      </ul>
+  
+      <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
+      <ul class="sidebar_item">
+        <li><a class="u-text-primary u-body-text" href="#">09 Navbar</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
+      </ul>
+  
+      <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
+      <ul class="sidebar_item">
+        <li><a class="u-text-primary u-body-text" href="#">12 Hero</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">13 Carousel</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">15 Footer</a></li>
+      </ul>
+  
+      <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
+      <ul class="sidebar_item">
+        <li><a class="u-text-primary u-body-text" href="#">16 Cards</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">17 Forms</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">18 Accordion</a></li>
+        <li><a class="u-text-primary u-body-text" href="#">19 Lists</a></li>
+      </ul>
+  </section>
+  
 
   <script src="design-system.js"></script>
 </body>
