Update hex values in typography

--- a/colors.html
+++ b/colors.html
@@ -76,21 +76,21 @@
     <div class="u-bg-primary u-text-primary">
         <p>Primary Background</p>
         <p>Class name : .u-bg-primary</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #faeee7</p>
         <p>Uses: Backgrounds</p>
       </div>
 
       <div class="u-bg-secondary u-text-primary">
         <p>Secondary Background</p>
         <p>Class name : .u-bg-secondary</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #c3f0ca</p>
         <p>Uses: Navbar and sides</p>
       </div>
 
       <div class="u-bg-white u-text-primary">
         <p>White Background</p>
         <p>Class name : .u-bg-white</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #fffffe</p>
         <p>Uses: Background Highlights</p>
       </div>
 
@@ -102,14 +102,14 @@
     <div class="u-bg-primary u-text-primary">
         <p>Primary Text</p>
         <p>Class name : .u-text-primary</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #594a4e</p>
         <p>Uses: Paragraphs</p>
       </div>
 
       <div class="u-bg-primary u-text-secondary">
-        <p>Primary Background</p>
+        <p>Secondary Text</p>
         <p>Class name : .u-text-secondary</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #33272a</p>
         <p>Uses: Headings and button text</p>
       </div>
     </div>
@@ -120,14 +120,14 @@
     <div class="u-accent u-text-secondary">
         <p>Primary Background</p>
         <p>Class name : .u-accent</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #ff8ba7</p>
         <p>Uses: Headings and button text</p>
       </div>
 
       <div class="u-accent-light u-text-secondary">
         <p>Primary Background</p>
         <p>Class name : .u-accent-light</p>
-        <p>Hex Code: #AED9AA</p>
+        <p>Hex Code: #ffc6c7</p>
         <p>Uses: Headings and button text</p>
       </div>
     </div>
