--- a/about-me.html
+++ b/about-me.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abhiram Shaji</title>
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link rel="stylesheet" type="text/css" href="design-system.css" />
+  <link rel="stylesheet" type="text/css" href="./styles.css" />
+  <link rel="stylesheet" type="text/css" href="./design-system.css" />
 </head>
 
 <body class="portfolio">
@@ -61,7 +61,7 @@
   </section>
 
 
-  <script src="design-system.js"></script>
+  <script src="./design-system.js"></script>
 </body>
 
 </html>
