--- a/typography.html
+++ b/typography.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design System</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="design-system.css">
+  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./design-system.css">
 </head>
 
 <body>
@@ -170,7 +170,7 @@
   </section>
 
 
-  <script src="design-system.js"></script>
+  <script src="./design-system.js"></script>
 </body>
 
 </html>
