Add href to spacing html

--- a/typography.html
+++ b/typography.html
@@ -38,7 +38,7 @@
   
       <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
       <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text" href="#">04 Spacing</a></li>
+        <li><a class="u-text-primary u-body-text" href="spacing.html">04 Spacing</a></li>
         <li><a class="u-text-primary u-body-text" href="#">05 Containers</a></li>
         <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
         <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
