--- a/spacing.html
+++ b/spacing.html
@@ -32,14 +32,14 @@
     <section class="sidebar u-bg-white">
         <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
         <ul class="sidebar_item">
-            <li><a class="u-text-primary u-body-text active-page" href="colors.html">01 Colours</a></li>
+            <li><a class="u-text-primary u-body-text" href="colors.html">01 Colours</a></li>
             <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
             <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
         </ul>
 
         <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
         <ul class="sidebar_item">
-            <li><a class="u-text-primary u-body-text" href="#">04 Spacing</a></li>
+            <li><a class="u-text-primary u-body-text active-page" href="spacing.html">04 Spacing</a></li>
             <li><a class="u-text-primary u-body-text" href="#">05 Containers</a></li>
             <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
             <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
