Add section to demonstrate containers

--- a/spacing.html
+++ b/spacing.html
@@ -166,8 +166,21 @@
       <p>Column 2: Each column receives an equal fraction of the container's width.</p>
       <p>Column 3: The use of columns is effective for presenting related information side by side.</p>
     </div>
-    
+  
+  </section>
 
+  <section>
+    <!-- Full-width section, stretches 100% of the viewport width -->
+<div class="full-width">
+  <h2>Full Width Section</h2>
+  <p>This section stretches to the full width of the viewport.</p>
+</div>
+
+<!-- Container, will have padding on mobile and be centered with a max-width of 1200px on wider screens -->
+<div class="container">
+  <h2>Container Section</h2>
+  <p>This section is within a container that adds padding on the sides on mobile devices, and is centered with a maximum width of 1200px on screens wider than 768px.</p>
+</div>
   </section>
 
   <script src="./design-system.js"></script>
