--- a/spacing.html
+++ b/spacing.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colors</title>
+  <title>Spacing</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./design-system.css">
 </head>
@@ -70,118 +70,136 @@
     </ul>
   </section>
 
-  <!-- Color swatches -->
+  <!-- Spacing properties -->
 
   <section>
-    <div class="l-m">
-      This div has a margin of 1rem on all sides.
+    <div class="l-m spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a margin of 1rem on all sides.</p>
+      <p>Classes: l-m</p>
     </div>
-
-    <div class="l-mt-1">
-      This div has a margin-top of 1rem.
+  
+    <div class="l-mt-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a margin-top of 1rem.</p>
+      <p>Classes: l-mt-1</p>
     </div>
-
-    <div class="l-mb-1">
-      This div has a margin-bottom of 1rem.
+  
+    <div class="l-mb-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a margin-bottom of 1rem.</p>
+      <p>Classes: l-mb-1</p>
     </div>
-
-    <div class="l-mr-1">
-      This div has a margin-right of 1rem.
+  
+    <div class="l-mr-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a margin-right of 1rem.</p>
+      <p>Classes: l-mr-1</p>
     </div>
-
-    <div class="l-ml-1">
-      This div has a margin-left of 1rem.
+  
+    <div class="l-ml-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a margin-left of 1rem.</p>
+      <p>Classes: l-ml-1</p>
     </div>
-
-    <div class="l-mx-1">
-      This div has a margin-left and margin-right of 1rem.
+  
+    <div class="l-mx-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a margin-left and margin-right of 1rem.</p>
+      <p>Classes: l-mx-1</p>
     </div>
-
-    <div class="l-my-1">
-      This div has a margin-top and margin-bottom of 1rem.
+  
+    <div class="l-my-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a margin-top and margin-bottom of 1rem.</p>
+      <p>Classes: l-my-1</p>
     </div>
+</section>
 
-  </section>
-
-  <section>
-    <div class="l-p">
-      This div has a padding of 1rem on all sides.
+<section>
+    <div class="l-p spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a padding of 1rem on all sides.</p>
+      <p>Classes: l-p</p>
     </div>
-
-    <div class="l-pt-1">
-      This div has a padding-top of 1rem.
+  
+    <div class="l-pt-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a padding-top of 1rem.</p>
+      <p>Classes: l-pt-1</p>
     </div>
-
-    <div class="l-pb-1">
-      This div has a padding-bottom of 1rem.
+  
+    <div class="l-pb-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a padding-bottom of 1rem.</p>
+      <p>Classes: l-pb-1</p>
     </div>
-
-    <div class="l-pr-1">
-      This div has a padding-right of 1rem.
+  
+    <div class="l-pr-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a padding-right of 1rem.</p>
+      <p>Classes: l-pr-1</p>
     </div>
-
-    <div class="l-pl-1">
-      This div has a padding-left of 1rem.
+  
+    <div class="l-pl-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a padding-left of 1rem.</p>
+      <p>Classes: l-pl-1</p>
     </div>
-
-    <div class="l-px-1">
-      This div has a padding-left and padding-right of 1rem.
+  
+    <div class="l-px-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This div has a padding-left and padding-right of 1rem.</p>
+      <p>Classes: l-px-1</p>
     </div>
-
-    <div class="l-py-1">
-      This div has a padding-top and padding-bottom of 1rem.
+  
+    <div class="l-py-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This div has a padding-top and padding-bottom of 1rem.</p>
+      <p>Classes: l-py-1</p>
     </div>
+</section>
 
-  </section>
-
-  <section>
-
-    <div class="l-flex l-justify-center l-align-center">
+<section>
+    <div class="l-flex l-justify-center l-align-center spacing-example-div u-bg-primary u-body-text u-text-primary">
       <p>This flex container centers its child paragraph horizontally and vertically within a 200px tall container.</p>
-      <p>----Item 1</p>
-      <p>----Item 2</p>
+      <p>----Item 1----</p>
+      <p>----Item 2----</p>
+      <p>Classes: l-flex l-justify-center l-align-center</p>
     </div>
 
     <!-- Flex Row -->
-    <div class="l-flex l-flex-row">
+    <div class="l-flex l-flex-row spacing-example-div u-bg-secondary u-body-text u-text-primary">
       <p>Row: Items are laid out in a row, showing how text content aligns side by side.</p>
-      <p>--------Item 1</p>
-      <p>--------Item 2</p>
+      <p>----Item 1----</p>
+      <p>----Item 2----</p>
+      <p>Classes: l-flex l-flex-row</p>
     </div>
 
     <!-- Flex Column -->
-    <div class="l-flex l-flex-col">
+    <div class="l-flex l-flex-col spacing-example-div u-bg-primary u-body-text u-text-primary">
       <p>Column: Items are stacked vertically, illustrating a columnar arrangement of text content.</p>
       <p>Item 1</p>
       <p>Item 2</p>
+      <p>Classes: l-flex l-flex-col</p>
     </div>
 
-    <div class="l-grid l-grid-cols-2">
+    <div class="l-grid l-grid-cols-2 spacing-example-div u-bg-secondary u-body-text u-text-primary">
       <p>This grid layout divides the content into two columns, evenly distributing the space.</p>
       <p>The second column's text demonstrates the equal division.</p>
+      <p>Classes: l-grid l-grid-cols-2</p>
     </div>
 
-    <div class="l-grid l-grid-cols-3">
+    <div class="l-grid l-grid-cols-3 spacing-example-div u-bg-primary u-body-text u-text-primary">
       <p>Column 1: This grid features three columns, showcasing how content can be organized.</p>
       <p>Column 2: Each column receives an equal fraction of the container's width.</p>
       <p>Column 3: The use of columns is effective for presenting related information side by side.</p>
+      <p>Classes: l-grid l-grid-cols-3</p>
     </div>
-  
-  </section>
+</section>
 
-  <section>
+<section>
     <!-- Full-width section, stretches 100% of the viewport width -->
-<div class="full-width">
-  <h2>Full Width Section</h2>
-  <p>This section stretches to the full width of the viewport.</p>
-</div>
+    <div class="full-width spacing-example-div u-bg-secondary u-body-text u-text-primary">
+      <p>This section stretches to the full width of the viewport.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Classes: full-width</p>
+    </div>
 
-<!-- Container, will have padding on mobile and be centered with a max-width of 1200px on wider screens -->
-<div class="container">
-  <h2>Container Section</h2>
-  <p>This section is within a container that adds padding on the sides on mobile devices, and is centered with a maximum width of 1200px on screens wider than 768px.</p>
-</div>
-  </section>
+    <!-- Container, will have padding on mobile and be centered with a max-width of 1200px on wider screens -->
+    <div class="container spacing-example-div u-bg-primary u-body-text u-text-primary">
+      <p>This section is within a container that adds padding on the sides on mobile devices, and is centered with a maximum width of 1200px on screens wider than 768px.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Classes: container</p>
+    </div>
+</section>
+
 
   <script src="./design-system.js"></script>
 </body>
