Move contents of spacing to typography

--- a/containers.html
+++ b/containers.html
@@ -39,8 +39,8 @@
 
     <h2>Utilities</h2>
     <ul>
-      <li><a class="active-page" href="spacing.html">04 Spacing</a></li>
-      <li><a href="containers.html">05 Containers</a></li>
+      <li><a href="spacing.html">04 Spacing</a></li>
+      <li><a class="active-page" href="containers.html">05 Containers</a></li>
       <li><a href="#">06 Images</a></li>
       <li><a href="#">07 Interactive</a></li>
       <li><a href="#">08 Pages</a></li>
@@ -70,81 +70,7 @@
     </ul>
 </section>
 
-  <!-- Spacing properties -->
-
-  <section>
-    <div class="l-m spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a margin of 1rem on all sides.</p>
-      <p>Classes: l-m</p>
-    </div>
-  
-    <div class="l-mt-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a margin-top of 1rem.</p>
-      <p>Classes: l-mt-1</p>
-    </div>
-  
-    <div class="l-mb-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a margin-bottom of 1rem.</p>
-      <p>Classes: l-mb-1</p>
-    </div>
-  
-    <div class="l-mr-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a margin-right of 1rem.</p>
-      <p>Classes: l-mr-1</p>
-    </div>
-  
-    <div class="l-ml-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a margin-left of 1rem.</p>
-      <p>Classes: l-ml-1</p>
-    </div>
-  
-    <div class="l-mx-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a margin-left and margin-right of 1rem.</p>
-      <p>Classes: l-mx-1</p>
-    </div>
-  
-    <div class="l-my-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a margin-top and margin-bottom of 1rem.</p>
-      <p>Classes: l-my-1</p>
-    </div>
-</section>
-
-<section>
-    <div class="l-p spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a padding of 1rem on all sides.</p>
-      <p>Classes: l-p</p>
-    </div>
-  
-    <div class="l-pt-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a padding-top of 1rem.</p>
-      <p>Classes: l-pt-1</p>
-    </div>
-  
-    <div class="l-pb-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a padding-bottom of 1rem.</p>
-      <p>Classes: l-pb-1</p>
-    </div>
-  
-    <div class="l-pr-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a padding-right of 1rem.</p>
-      <p>Classes: l-pr-1</p>
-    </div>
-  
-    <div class="l-pl-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a padding-left of 1rem.</p>
-      <p>Classes: l-pl-1</p>
-    </div>
-  
-    <div class="l-px-1 spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>This div has a padding-left and padding-right of 1rem.</p>
-      <p>Classes: l-px-1</p>
-    </div>
-  
-    <div class="l-py-1 spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>This div has a padding-top and padding-bottom of 1rem.</p>
-      <p>Classes: l-py-1</p>
-    </div>
-</section>
+  <!-- Container properties -->
 
 <section>
     <div class="l-flex l-justify-center l-align-center spacing-example-div u-bg-primary u-body-text u-text-primary">
@@ -156,7 +82,7 @@
 
     <!-- Flex Row -->
     <div class="l-flex l-flex-row spacing-example-div u-bg-secondary u-body-text u-text-primary">
-      <p>Row: Items are laid out in a row, showing how text content aligns side by side.</p>
+      <p>In this flex container items are laid out in a row, showing how text content aligns side by side.</p>
       <p>----Item 1----</p>
       <p>----Item 2----</p>
       <p>Classes: l-flex l-flex-row</p>
@@ -164,7 +90,7 @@
 
     <!-- Flex Column -->
     <div class="l-flex l-flex-col spacing-example-div u-bg-primary u-body-text u-text-primary">
-      <p>Column: Items are stacked vertically, illustrating a columnar arrangement of text content.</p>
+      <p>In this flex container items are stacked vertically, illustrating a columnar arrangement of text content.</p>
       <p>Item 1</p>
       <p>Item 2</p>
       <p>Classes: l-flex l-flex-col</p>
