--- a/colors.html
+++ b/colors.html
@@ -14,177 +14,181 @@
   <!-- Navbar -->
   <header class="u-bg-secondary">
     <div class="logo">
-      <a class="logo_text u-text-secondary u-font-josefin-sans" href="index.html"><h2 class="u-heading">Design System</h2></a>
+      <a class="logo_text u-text-secondary u-font-josefin-sans" href="index.html">
+        <h2 class="u-heading">Design System</h2>
+      </a>
     </div>
     <nav class="navigation">
       <a class="navigation_item u-text-secondary u-body-text" href="about-me.html">About Me</a>
       <a class="navigation_item u-text-secondary u-body-text" href="">Demo Site</a>
     </nav>
-  
+
     <div class="toggleBox">
-      <a onclick="showMenu()" href="#" class="u-text-secondary"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
+      <a onclick="showMenu()" href="#" class="u-text-secondary"><img class="menu" alt="menu"
+          src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
     </div>
   </header>
-  
+
   <section class="sidebar u-bg-white">
-      <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
-      <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text active-page" href="colors.html">01 Colours</a></li>
-        <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
-      </ul>
-  
-      <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
-      <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text" href="spacing.html">04 Spacing</a></li>
-        <li><a class="u-text-primary u-body-text" href="containers.html">05 Containers</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
-      </ul>
-  
-      <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
-      <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text" href="#">09 Navbar</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
-      </ul>
-  
-      <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
-      <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text" href="#">12 Hero</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">13 Carousel</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">15 Footer</a></li>
-      </ul>
-  
-      <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
-      <ul class="sidebar_item">
-        <li><a class="u-text-primary u-body-text" href="#">16 Cards</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">17 Forms</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">18 Accordion</a></li>
-        <li><a class="u-text-primary u-body-text" href="#">19 Lists</a></li>
-      </ul>
+    <h2 class="sidebar_item u-text-secondary u-heading">Branding</h2>
+    <ul class="sidebar_item">
+      <li><a class="u-text-primary u-body-text active-page" href="colors.html">01 Colours</a></li>
+      <li><a class="u-text-primary u-body-text" href="typography.html">02 Typography</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">03 Logo</a></li>
+    </ul>
+
+    <h2 class="sidebar_item u-text-secondary u-heading">Utilities</h2>
+    <ul class="sidebar_item">
+      <li><a class="u-text-primary u-body-text" href="spacing.html">04 Spacing</a></li>
+      <li><a class="u-text-primary u-body-text" href="containers.html">05 Containers</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">06 Images</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">07 Interactive</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">08 Pages</a></li>
+    </ul>
+
+    <h2 class="sidebar_item u-text-secondary u-heading">Navigation</h2>
+    <ul class="sidebar_item">
+      <li><a class="u-text-primary u-body-text" href="#">09 Navbar</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">10 Breadcrumbs</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">11 Pagination</a></li>
+    </ul>
+
+    <h2 class="sidebar_item u-text-secondary u-heading">Blocks</h2>
+    <ul class="sidebar_item">
+      <li><a class="u-text-primary u-body-text" href="#">12 Hero</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">13 Carousel</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">14 Slats</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">15 Footer</a></li>
+    </ul>
+
+    <h2 class="sidebar_item u-text-secondary u-heading">Components</h2>
+    <ul class="sidebar_item">
+      <li><a class="u-text-primary u-body-text" href="#">16 Cards</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">17 Forms</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">18 Accordion</a></li>
+      <li><a class="u-text-primary u-body-text" href="#">19 Lists</a></li>
+    </ul>
   </section>
 
   <!-- Color swatches -->
+  <div class="main-content">
+    <section class="color-swatch-container">
+      <!-- Background Colors -->
+      <div>
+        <h2>Background</h2>
+        <div class="u-bg-primary u-text-primary">
+          <p>Primary Background</p>
+          <p>Class name : .u-bg-primary</p>
+          <p>Hex Code: #faeee7</p>
+          <p>Uses: Backgrounds</p>
+        </div>
 
-  <section class="color-swatch-container">
-    <!-- Background Colors -->
-    <div>
-    <h2>Background</h2>
-    <div class="u-bg-primary u-text-primary">
-        <p>Primary Background</p>
-        <p>Class name : .u-bg-primary</p>
-        <p>Hex Code: #faeee7</p>
-        <p>Uses: Backgrounds</p>
+        <div class="u-bg-secondary u-text-primary">
+          <p>Secondary Background</p>
+          <p>Class name : .u-bg-secondary</p>
+          <p>Hex Code: #c3f0ca</p>
+          <p>Uses: Navbar and sides</p>
+        </div>
+
+        <div class="u-bg-white u-text-primary">
+          <p>White Background</p>
+          <p>Class name : .u-bg-white</p>
+          <p>Hex Code: #fffffe</p>
+          <p>Uses: Background Highlights</p>
+        </div>
+
       </div>
 
-      <div class="u-bg-secondary u-text-primary">
-        <p>Secondary Background</p>
-        <p>Class name : .u-bg-secondary</p>
-        <p>Hex Code: #c3f0ca</p>
-        <p>Uses: Navbar and sides</p>
+      <!-- Font Colors -->
+      <div>
+        <h2>Texts</h2>
+        <div class="u-bg-primary u-text-primary">
+          <p>Primary Text</p>
+          <p>Class name : .u-text-primary</p>
+          <p>Hex Code: #594a4e</p>
+          <p>Uses: Paragraphs</p>
+        </div>
+
+        <div class="u-bg-primary u-text-secondary">
+          <p>Secondary Text</p>
+          <p>Class name : .u-text-secondary</p>
+          <p>Hex Code: #33272a</p>
+          <p>Uses: Headings and button text</p>
+        </div>
       </div>
 
-      <div class="u-bg-white u-text-primary">
-        <p>White Background</p>
-        <p>Class name : .u-bg-white</p>
-        <p>Hex Code: #fffffe</p>
-        <p>Uses: Background Highlights</p>
+      <!-- Accent Colors -->
+      <div>
+        <h2>Accent</h2>
+        <div class="u-accent u-text-secondary">
+          <p>Primary Background</p>
+          <p>Class name : .u-accent</p>
+          <p>Hex Code: #ff8ba7</p>
+          <p>Uses: Headings and button text</p>
+        </div>
+
+        <div class="u-accent-light u-text-secondary">
+          <p>Primary Background</p>
+          <p>Class name : .u-accent-light</p>
+          <p>Hex Code: #ffc6c7</p>
+          <p>Uses: Headings and button text</p>
+        </div>
       </div>
 
-    </div>
+      <!-- Color Contrast -->
+      <div>
+        <h2>Color Contrast</h2>
+        <div class="u-bg-primary u-text-primary">
+          <p>Primary Background</p>
+          <p>Primary text</p>
+          <p>Contrast Ratio : 7.33:1 Pass </p>
+        </div>
 
-    <!-- Font Colors -->
-    <div>
-    <h2>Texts</h2>
-    <div class="u-bg-primary u-text-primary">
-        <p>Primary Text</p>
-        <p>Class name : .u-text-primary</p>
-        <p>Hex Code: #594a4e</p>
-        <p>Uses: Paragraphs</p>
+        <div class="u-bg-secondary u-text-primary">
+          <p>Secondary Background</p>
+          <p>Primary text</p>
+          <p>Contrast Ratio : 6.61:1 Pass </p>
+        </div>
+
+        <div class="u-bg-primary u-text-secondary">
+          <p>Primary Background</p>
+          <p>Secondary text</p>
+          <p>Contrast Ratio : 12.59:1 Pass </p>
+        </div>
+
+        <div class="u-bg-secondary u-text-secondary">
+          <p>Secondary Background</p>
+          <p>Secondary text</p>
+          <p>Contrast Ratio : 11.36:1 Pass </p>
+        </div>
+
+        <div class="u-bg-white u-text-primary">
+          <p>White Background</p>
+          <p>Primary text</p>
+          <p>Contrast Ratio : 8.34:1 Pass </p>
+        </div>
+
+        <div class="u-bg-white u-text-secondary">
+          <p>White Background</p>
+          <p>Secondary text</p>
+          <p>Contrast Ratio : 14.33:1 Pass </p>
+        </div>
+
+        <div class="u-accent u-text-secondary">
+          <p>Accent Background</p>
+          <p>Secondary text</p>
+          <p>Contrast Ratio : 6.48:1 </p>
+        </div>
+
+        <div class="u-accent-light u-text-secondary">
+          <p>Accent Light Background</p>
+          <p>Secondary text</p>
+          <p>Contrast Ratio : 9.66:1 </p>
+        </div>
+
       </div>
-
-      <div class="u-bg-primary u-text-secondary">
-        <p>Secondary Text</p>
-        <p>Class name : .u-text-secondary</p>
-        <p>Hex Code: #33272a</p>
-        <p>Uses: Headings and button text</p>
-      </div>
-    </div>
-
-    <!-- Accent Colors -->
-    <div>
-    <h2>Accent</h2>
-    <div class="u-accent u-text-secondary">
-        <p>Primary Background</p>
-        <p>Class name : .u-accent</p>
-        <p>Hex Code: #ff8ba7</p>
-        <p>Uses: Headings and button text</p>
-      </div>
-
-      <div class="u-accent-light u-text-secondary">
-        <p>Primary Background</p>
-        <p>Class name : .u-accent-light</p>
-        <p>Hex Code: #ffc6c7</p>
-        <p>Uses: Headings and button text</p>
-      </div>
-    </div>
-
-    <!-- Color Contrast -->
-    <div>
-    <h2>Color Contrast</h2>
-    <div class="u-bg-primary u-text-primary">
-        <p>Primary Background</p>
-        <p>Primary text</p>
-        <p>Contrast Ratio  : 7.33:1 Pass </p>
-      </div>
-
-      <div class="u-bg-secondary u-text-primary">
-        <p>Secondary Background</p>
-        <p>Primary text</p>
-        <p>Contrast Ratio  : 6.61:1 Pass </p>
-      </div>
-
-      <div class="u-bg-primary u-text-secondary">
-        <p>Primary Background</p>
-        <p>Secondary text</p>
-        <p>Contrast Ratio  : 12.59:1 Pass </p>
-      </div>
-
-      <div class="u-bg-secondary u-text-secondary">
-        <p>Secondary Background</p>
-        <p>Secondary text</p>
-        <p>Contrast Ratio  : 11.36:1 Pass </p>
-      </div>
-
-      <div class="u-bg-white u-text-primary">
-        <p>White Background</p>
-        <p>Primary text</p>
-        <p>Contrast Ratio  : 8.34:1 Pass </p>
-      </div>
-
-      <div class="u-bg-white u-text-secondary">
-        <p>White Background</p>
-        <p>Secondary text</p>
-        <p>Contrast Ratio  : 14.33:1 Pass </p>
-      </div>
-
-      <div class="u-accent u-text-secondary">
-        <p>Accent Background</p>
-        <p>Secondary text</p>
-        <p>Contrast Ratio  : 6.48:1 </p>
-      </div>
-
-      <div class="u-accent-light u-text-secondary">
-        <p>Accent Light Background</p>
-        <p>Secondary text</p>
-        <p>Contrast Ratio  : 9.66:1 </p>
-      </div>
-
-    </div>
-  </section>
+    </section>
+  </div>
 
   <script src="./design-system.js"></script>
 </body>
